something changed for sure

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1, 1920x1080@165.00301, 0x0, 1, bitdepth, 10
+monitor=DP-1, 1920x1080@165.00, 0x0, 1, bitdepth, 10
 
 
 ###################
@@ -61,8 +61,10 @@ exec-once = sleep 5 && pactl set-sink-volume @DEFAULT_SINK@ 15% # set 15% volume
 
 exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 3 silent] $spotify
+exec-once = [workspace 3 silent] kate
+exec-once = [workspace 5 silent] $spotify
 exec-once = [workspace 9 silent] steam
+exec-once = [workspace special:12 silent] btop
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -72,7 +74,7 @@ exec-once = [workspace 9 silent] steam
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME = Catppuccin-Macchiato-Dark-Cursors
+#env = HYPRCURSOR_THEME = Catppuccin-Macchiato-Dark-Cursors
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
@@ -89,7 +91,7 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = NVD_BACKEND,direct
 
-render:explicit_sync = 1 
+#render:explicit_sync = 1
 
 # allow g-sync 1
 env = __GL_GSYNC_ALLOWED,1
@@ -153,14 +155,16 @@ animations {
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    #bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
+    bezier = myBezier, 0.05, 0.9, 0.05, 1.0
+
+    animation = windows, 1, 4, myBezier #7
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 5, default #6
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
