--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/hypr/wallpaper/cats-4k.jpg
-wallpaper = ~/.config/hypr/wallpaper/cats-4k.jpg
+preload = /home/pryniki/.config/hypr/wallpaper/cats-4k.jpg
+wallpaper = DP-1, /home/pryniki/.config/hypr/wallpaper/cats-4k.jpg
