few hypr comebacks, usual stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,9 @@
 
 source=~/.config/hypr/mocha.conf
 
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" # for GTK4 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita'
 
 ################
 ### MONITORS ###
@@ -32,7 +34,7 @@ monitor=DP-1, 1920x1080@165.00, 0x0, 1, bitdepth, 10
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = XDG_CURRENT_DESKTOP=kde dolphin
 $menu = rofi -show drun
 $browser = flatpak run io.gitlab.librewolf-community
 $proxy = sudo v2raya
@@ -61,10 +63,8 @@ exec-once = sleep 5 && pactl set-sink-volume @DEFAULT_SINK@ 15% # set 15% volume
 
 exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 3 silent] kate
 exec-once = [workspace 5 silent] $spotify
 exec-once = [workspace 9 silent] steam
-exec-once = [workspace special:12 silent] btop
 
 #############################
 ### ENVIRONMENT VARIABLES ###
