--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,17 +1,23 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=true
-gtk-cursor-theme-name=Catppuccin-Mocha-Mauve-Cursors
-gtk-cursor-theme-size=32
+gtk-theme-name=Breeze
+gtk-icon-theme-name=breeze-dark
+gtk-font-name=Noto Sans,  11
+gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-size=24
+gtk-toolbar-style=3
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=1
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=false
-gtk-enable-event-sounds=false
-gtk-font-name=Noto Sans,  11
-gtk-icon-theme-name=breeze-dark
-gtk-menu-images=true
 gtk-modules=window-decorations-gtk-module:colorreload-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-theme-name=Breeze
-gtk-toolbar-style=3
 gtk-xft-dpi=98304
