--- a/.config/kde.org/UserFeedback.org.kde.kwrite.conf
+++ b/.config/kde.org/UserFeedback.org.kde.kwrite.conf
@@ -17,5 +17,5 @@ dataSourceCommonSettings\activeState=true
 dataSourceCommonSettings\activeState=true
 
 [UserFeedback]
-ApplicationStartCount=9
-ApplicationTime=16110
+ApplicationStartCount=11
+ApplicationTime=16954
