--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/home/pryniki/.config/qt5ct/colors/catppuccin-mocha-mauve.conf
 custom_palette=true
 standard_dialogs=default
-style=Windows
+style=Fusion
 
 [Fonts]
 fixed="Noto Sans,12,-1,5,50,0,0,0,0,0"
