--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,7 +15,7 @@
 source=~/.config/hypr/mocha.conf
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-mocha-mauve-standard+default" # for GTK3 apps
-#exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark" # for GTK4 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "catppuccin-mocha-mauve-standard+default" # for GTK4 apps
 exec = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 
 ################
@@ -23,8 +23,7 @@ exec = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1, 1920x1080@165.00, 0x0, 1, bitdepth, 10
-
+monitor=DP-1, 1920x1080@165, 0x0, 1, bitdepth, 10
 
 ###################
 ### MY PROGRAMS ###
@@ -57,12 +56,15 @@ exec-once = hypridle
 exec-once = sudo v2raya
 exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = waybar
+exec-once = waybar & disown
+#exec-once = fcitx5 & disown
+exec-once = systemctl --user enable opentabletdriver.service --now
 
 exec-once = sleep 5 && pactl set-sink-volume @DEFAULT_SINK@ 15% # set 15% volume
 
 exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 4 silent] krita
 exec-once = [workspace 5 silent] $spotify
 exec-once = [workspace 9 silent] steam
 
@@ -71,6 +73,11 @@ exec-once = [workspace 9 silent] steam
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
+
+#fcitx5
+#env = GTK_IM_MODULE=fcitx
+#env = QT_IM_MODULE=fcitx
+#env = XMODIFIERS=@im=fcitx
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
@@ -86,7 +93,7 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_STYLE_OVERRIDE,kvantum
+#env = QT_STYLE_OVERRIDE,kvantum
 
 # for nvidia
 env = LIBVA_DRIVER_NAME,nvidia
@@ -94,12 +101,10 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = NVD_BACKEND,direct
 
-#render:explicit_sync = 1
-
 # allow g-sync 1
-env = __GL_GSYNC_ALLOWED,1
+#env = __GL_GSYNC_ALLOWED,1
 # enable adaptive sync 1
-env = __GL_VRR_ALLOWED,1
+#env = __GL_VRR_ALLOWED,1
 
 #####################
 ### LOOK AND FEEL ###
@@ -163,11 +168,11 @@ animations {
     bezier = myBezier, 0.05, 0.9, 0.05, 1.0
 
     animation = windows, 1, 4, myBezier #7
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 5, default #6
+    animation = windowsOut, 1, 4, default, popin 80% # def speed 7
+    animation = border, 1, 7, default # def speed 10
+    animation = borderangle, 1, 5, default # def speed 8
+    animation = fade, 1, 4, default # def speed 7
+    animation = workspaces, 1, 2, default # def speed 6
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -185,15 +190,17 @@ master {
 misc { 
     force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    # enable vrr
     vrr = 1
 }
 
 cursor {
-no_break_fs_vrr = false
+#no_break_fs_vrr = 1
+no_hardware_cursors = true
 }
 
 render {
-    direct_scanout = false
+direct_scanout = true
 }
 
 
@@ -206,7 +213,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model = ,qwerty
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:caps_toggle
     kb_rules =
 
     repeat_delay = 250
@@ -214,7 +221,9 @@ input {
 
     follow_mouse = 1
 
-force_no_accel = true
+    float_switch_override_focus = 0
+
+    force_no_accel = true
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -235,7 +244,6 @@ device {
     sensitivity = -0.5
 }
 
-
 ####################
 ### KEYBINDINGSS ###
 ####################
@@ -246,13 +254,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, Q, exit,
+bind = $mainMod, escape, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, space, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
+bind = $mainMod ALT, B, exec, env -u WAYLAND_DISPLAY firefox
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod ALT, L, exec, systemctl suspend
 bind = $mainMod, Z, exec, $proxy
@@ -260,6 +269,13 @@ bind = $mainMod ALT, Z, exec, $killProxy
 bind = $mainMod, M, exec, $spotify
 bind = $mainMod CONTROL, C, exec, hyprpicker -a
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod ALT, K, exec, QT_QPA_PLATFORM=xcb nemo
+bind = $mainMod, A, exec, /home/pryniki/.appimages/krita-5.2.10-x86_64.AppImage
+bind = $mainMod ALT, A, exec, env -u WAYLAND_DISPLAY /home/pryniki/.appimages/PureRef-2.1.0.beta2_x64.Appimage
+
+# hypridle
+bind = $mainMod, I, exec, hypridle & disown && notify-send "idle enabled"
+bind = $mainMod ALT, I, exec, killall hypridle && notify-send "idle disabled"
 
 # Brightness contorl
 bind = CONTROL SHIFT, up, exec, ddcutil -d 1 setvcp 10 + 10
@@ -305,7 +321,7 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Switch special workspaces with mainMod + [F1-F12]
-bind = $mainMod, F1, togglespecialworkspace, 1
+bind = $mainMod, F1, togglespecialworkspace, art
 bind = $mainMod, F2, togglespecialworkspace, 2
 bind = $mainMod, F4, togglespecialworkspace, 3
 bind = $mainMod, F5, togglespecialworkspace, 4
@@ -320,6 +336,7 @@ bind = $mainMod, F12, togglespecialworkspace, 12
 
 # Move active window to a workspace with mainMod + SHIFT + [F1-F12]
 bind = $mainMod SHIFT, F9, movetoworkspace, special:games
+bind = $mainMod SHIFT, F1, movetoworkspace, special:art
 
 
 # Example special workspace (scratchpad)
@@ -340,6 +357,9 @@ bind = $mainMod ALT, C, exec, hyprctl kill
 #toggle fullscreen
 bind = $mainMod, F, fullscreen,
 
+#change language in fcitx5
+#bind = SHIFT, Alt_L, exec, fcitx5-remote -t
+
 #toggle hyprbars
 #bind = $mainMod ALT, B, plugin:hyprbars:nobar
 
@@ -358,13 +378,22 @@ bind = $mainMod, F, fullscreen,
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-# allow tearing
-windowrulev2 = immediate, class:(steam_app_2357570) # overwatch
+# everything (testing)
+#windowrulev2 = noinitialfocus, class:(*)
+#workspace = w[tv1], gapsout:0, gapsin:0, bordersize:0
+#workspace = w[fv1-100], gapsout:10, gapsin:5, bordersize:2
 
-windowrulev2 = fullscreen, class:(gamescope)
+# allow tearing
+windowrulev2 = fullscreen, title:(Overwatch)
+windowrulev2 = immediate, title:(Overwatch)
+#windowrulev2 = immediate, class:(steam_app_2357570) # overwatch
+windowrulev2 = immediate, class:(steam_app_2767030) # marvel rivals
+
+#windowrulev2 = fullscreen, class:(gamescope)
 
 # spotify rules
-windowrulev2 = workspace 3 silent, fullscreen, class:^(Spotify)$
+windowrulev2 = workspace 3 silent, class:^(Spotify)$
+workspace = 3, gapsin:0, gapsout:0
 
 
 # steam rules
@@ -373,3 +402,25 @@ workspace = special, 10, border:false, rounding:false
 windowrulev2 = workspace 9 silent, monitor 1, class:^(steam)$
 # As far as I know the problematic pop-ups have the window class "steam" and an empty title.
 windowrulev2 = stayfocused, class:(steam), title:(^$)
+
+
+# krita rules
+windowrulev2 = workspace 4, silent, class:^(krita)$ 
+windowrulev2 = nofocus, class:^krita$, title:^Krita$, floating:1
+#windowrulev2 = nofollowmouse, class:^krita$
+
+
+#windowrulev2 = stayfocused, class:^krita$, title:^Krita$
+#windowrulev2 = stayfocused, class:^krita$, title:Krita, floating:1
+#workspace = special, art, nofollowmouse, nofocus
+workspace = 4, gapsin:0, gapsout:0, bordersize:0, followmouse:2
+
+
+# librewolf
+windowrulev2 = noinitialfocus, class:(Librewolf)
+#workspace = 2, gapsout:0, gapsin:0, bordersize:0
+#workspace = 2, gapsout:10, gapsin:5, bordersize:2, onworkspace:w[fv1-100]
+
+
+#nemo file explorer
+#windowrulev2 = nofocus, class:^nemo$, floating:1
