--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -2,7 +2,7 @@
 color_scheme_path=/home/pryniki/.config/qt5ct/colors/catppuccin-mocha-mauve.conf
 custom_palette=true
 standard_dialogs=default
-style=Fusion
+style=Darkly
 
 [Fonts]
 fixed="Noto Sans,12,-1,5,50,0,0,0,0,0"
@@ -24,7 +24,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x3\xf7\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\xf\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x3\xf7)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x3\xcf\0\0\0\0\x2\x4\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37)
 
 [Troubleshooting]
 force_raster_widgets=1
