zero gaps and borders when one tiled window on workspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = sudo v2raya
 exec-once = udiskie &
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type text --watch cliphist store -max-items 10 # Stores only text data
 exec-once = waybar & disown
 #exec-once = fcitx5 & disown
 exec-once = systemctl --user enable opentabletdriver.service --now
@@ -272,6 +272,7 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = $mainMod ALT, K, exec, QT_QPA_PLATFORM=xcb nemo
 bind = $mainMod, A, exec, /home/pryniki/.appimages/krita-5.2.10-x86_64.AppImage
 bind = $mainMod ALT, A, exec, env -u WAYLAND_DISPLAY /home/pryniki/.appimages/PureRef-2.1.0.beta2_x64.Appimage
+bind = $mainMod, G, exec, /home/pryniki/.appimages/sabaki-v0.52.2-linux-x64.AppImage
 
 # hypridle
 bind = $mainMod, I, exec, hypridle & disown && notify-send "idle enabled"
@@ -383,6 +384,12 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 #workspace = w[tv1], gapsout:0, gapsin:0, bordersize:0
 #workspace = w[fv1-100], gapsout:10, gapsin:5, bordersize:2
 
+# Disable borders and gaps when only one tile (window or group) exists
+workspace = w[tv1], bordersize:0, gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, gapsout:0, gapsin:0, onworkspace:w[tv1]
+# Ensure floating windows still have a border
+windowrulev2 = bordersize 2, floating:1
+
 # allow tearing
 windowrulev2 = fullscreen, title:(Overwatch)
 windowrulev2 = immediate, title:(Overwatch)
@@ -405,7 +412,7 @@ windowrulev2 = stayfocused, class:(steam), title:(^$)
 
 
 # krita rules
-windowrulev2 = workspace 4, silent, class:^(krita)$ 
+windowrulev2 = workspace 4 silent, class:^(krita)$ 
 windowrulev2 = nofocus, class:^krita$, title:^Krita$, floating:1
 #windowrulev2 = nofollowmouse, class:^krita$
 
