--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -25,10 +25,10 @@ listener {
 
 listener {
     timeout = 900                                 # 15min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    on-timeout = hyprctl switchxkblayout gaming-keyboard 0 & loginctl lock-session            # lock screen when timeout has passed
 }
 
 listener {
     timeout = 3600                                # 60min
-    on-timeout = systemctl suspend                # suspend pc
+    on-timeout = hyprctl switchxkblayout gaming-keyboard 0 & systemctl suspend                # suspend pc
 }
