mostly yazi and hyprland update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,7 +64,7 @@ exec-once = sleep 5 && pactl set-sink-volume @DEFAULT_SINK@ 15% # set 15% volume
 
 exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] krita
+#exec-once = [workspace 4 silent] krita
 exec-once = [workspace 5 silent] $spotify
 exec-once = [workspace 9 silent] steam
 
@@ -127,7 +127,7 @@ general {
     resize_on_border = true 
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = true
+    # allow_tearing = true
 
 
 
@@ -200,7 +200,8 @@ no_hardware_cursors = true
 }
 
 render {
-direct_scanout = true
+
+direct_scanout = 1
 }
 
 
@@ -269,8 +270,9 @@ bind = $mainMod ALT, Z, exec, $killProxy
 bind = $mainMod, M, exec, $spotify
 bind = $mainMod CONTROL, C, exec, hyprpicker -a
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER_ALT, V, exec, cliphist wipe
 bind = $mainMod ALT, K, exec, QT_QPA_PLATFORM=xcb nemo
-bind = $mainMod, A, exec, /home/pryniki/.appimages/krita-5.2.10-x86_64.AppImage
+bind = $mainMod, A, exec, /home/pryniki/.appimages/krita-5.2.11-x86_64.AppImage
 bind = $mainMod ALT, A, exec, env -u WAYLAND_DISPLAY /home/pryniki/.appimages/PureRef-2.1.0.beta2_x64.Appimage
 bind = $mainMod, G, exec, /home/pryniki/.appimages/sabaki-v0.52.2-linux-x64.AppImage
 
@@ -412,15 +414,17 @@ windowrulev2 = stayfocused, class:(steam), title:(^$)
 
 
 # krita rules
-windowrulev2 = workspace 4 silent, class:^(krita)$ 
-windowrulev2 = nofocus, class:^krita$, title:^Krita$, floating:1
-#windowrulev2 = nofollowmouse, class:^krita$
+#windowrulev2 = workspace 4 silent, class:^(krita)$
+
+#for layers
+#windowrulev2 = nofocus, class:^krita$, title:^Krita$, floating:1
+windowrulev2 = nofollowmouse, class:^(krita)$, title:^(Krita)$
 
 
 #windowrulev2 = stayfocused, class:^krita$, title:^Krita$
 #windowrulev2 = stayfocused, class:^krita$, title:Krita, floating:1
 #workspace = special, art, nofollowmouse, nofocus
-workspace = 4, gapsin:0, gapsout:0, bordersize:0, followmouse:2
+workspace = 4, gapsin:0, gapsout:0, bordersize:0, followmouse:1
 
 
 # librewolf
