bunch of stuff (I really don't do these regularly, am I?)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,8 +14,8 @@
 
 source=~/.config/hypr/mocha.conf
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-mocha-mauve-standard+default" # for GTK3 apps
-exec = gsettings set org.gnome.desktop.interface color-scheme "catppuccin-mocha-mauve-standard+default" # for GTK4 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-macchiato-mauve-standard+default" # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "catppuccin-macchiato-mauve-standard+default" # for GTK4 apps
 exec = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 
 ################
@@ -50,6 +50,7 @@ $spotify = flatpak run com.spotify.Client
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar
+#exec-once = exec ssh-agent fish
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = hyprpaper
 exec-once = hypridle
@@ -102,9 +103,9 @@ env = GBM_BACKEND,nvidia-drm
 env = NVD_BACKEND,direct
 
 # allow g-sync 1
-#env = __GL_GSYNC_ALLOWED,1
+env = __GL_GSYNC_ALLOWED,1
 # enable adaptive sync 1
-#env = __GL_VRR_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
 
 #####################
 ### LOOK AND FEEL ###
@@ -289,9 +290,9 @@ bind = CONTROL, up, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = CONTROL, down, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 
 # Media control shortcuts
-bind = CONTROL, Next, exec, playerctl --player=spotify play-pause
-bind = CONTROL, Right, exec, playerctl --player=spotify next
-bind = CONTROL, Left, exec, playerctl --player=spotify previous
+bind = ALT, Next, exec, playerctl --player=spotify play-pause
+bind = ALT, Right, exec, playerctl --player=spotify next
+bind = ALT, Left, exec, playerctl --player=spotify previous
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
