--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,8 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt6ct/colors/airy.conf
-custom_palette=false
-standard_dialogs=gtk3
-style=kvantum-dark
+color_scheme_path=/home/pryniki/.config/qt6ct/style-colors.conf
+custom_palette=true
+icon_theme=Papirus-Dark
+standard_dialogs=default
+style=kvantum
 
 [Fonts]
 fixed="Noto Sans,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1"
@@ -24,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x1\xf3\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x1\xf3\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xac\0\0\x1\xf3)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\xe\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\xe\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xbf\0\0\x4\xe)
 
 [Troubleshooting]
 force_raster_widgets=1
