--- a/.local/share/.gitignore
+++ b/.local/share/.gitignore
@@ -1,16 +1,12 @@
-# Blocklist files/folders in same directory as the .gitignore file
+# Ignore
 /*
 
 # Include
 !.gitignore
 
-!rofi
-!icons
-!themes
-!color-schemes
-!applications
-!konsole
-
-# Ignore all files named .DS_Store or ending with .log
-**/.DS_Store
-**.log
+!rofi/
+!icons/
+!themes/
+!color-schemes/
+!applications/
+!konsole/
