--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 !.local/.gitignore
 
 # Ignore all files/folders containing specific string in the whole repository
-**/.DS_Store 
-**/*.log # Ignore files ending with ".log"
-**/*.log.* # Ignore files containing ".log."
+**/*.DS_Store # Ignore files/folders with name ".DS_Store"
+**/*.log
+**/*.log.* # Ignore files/folders containing ".log."
 **/*.bak
