change micro's clipboard behavior

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ exec = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1, 1920x1080@165, 0x0, 1, bitdepth, 10
+monitor=DP-1, 1920x1080@165, 0x0, 1, bitdepth, 10, vrr, 0
 
 ###################
 ### MY PROGRAMS ###
@@ -235,9 +235,7 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
