--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,13 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
+
+source = ~/.config/hypr/autostart.conf
+
+source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/utilities.conf
+source = ~/.config/hypr/bindings/media.conf
+
 #############
 ### THEME ###
 #############
@@ -30,22 +37,7 @@ env = GTK_THEME,catppuccin-macchiato-mauve-standard+default
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1, 1920x1080@165, 0x0, 1, bitdepth, 10
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = kitty
-$fileManager = nemo
-$menu = rofi -show drun
-$browser = flatpak run io.gitlab.librewolf-community
-$proxy = sudo v2raya
-$killProxy = sudo killall v2raya && sudo killall v2ray
-$spotify = flatpak run com.spotify.Client
+monitor=DP-1, 1920x1080@165, 0x0, 1, bitdepth, 8
 
 #################
 ### AUTOSTART ###
@@ -54,27 +46,7 @@ $spotify = flatpak run com.spotify.Client
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar
-#exec-once = exec ssh-agent fish
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = hyprpaper
-exec-once = hypridle
-exec-once = sudo v2raya
-exec-once = udiskie &
-exec-once = wl-paste --type text --watch cliphist store -max-items 10 # Stores only text data
-exec-once = waybar & disown
-#exec-once = fcitx5 & disown
-exec-once = systemctl --user enable opentabletdriver.service --now
 
-exec-once = sleep 5 && pactl set-sink-volume @DEFAULT_SINK@ 15% # set 15% volume
-
-exec-once = [workspace 1 silent] $terminal
-exec-once = [workspace 2 silent] $browser
-#exec-once = [workspace 4 silent] krita
-exec-once = [workspace 5 silent] $spotify
-exec-once = [workspace 9 silent] steam
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -112,18 +84,18 @@ env = NVD_BACKEND,direct
 # allow g-sync 1
 env = __GL_GSYNC_ALLOWED,1
 # enable adaptive sync 1
-env = __GL_VRR_ALLOWED,0
+env = __GL_VRR_ALLOWED,1
 
 #####################
 ### LOOK AND FEEL ###
 #####################
 
 ### nvidia:
-misc:vrr = 0
-misc:vfr = 0
-render:direct_scanout = 0
+misc:vrr = 1
+misc:vfr = 1
+render:direct_scanout = 1
 cursor:no_hardware_cursors = 1
-cursor:no_break_fs_vrr = 0
+cursor:no_break_fs_vrr = 1
 
 
 ###
@@ -145,7 +117,7 @@ general {
     resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    # allow_tearing = true
+     allow_tearing = true
 
 
 
@@ -259,117 +231,6 @@ device {
 ### KEYBINDINGSS ###
 ####################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, escape, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, space, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, B, exec, $browser
-bind = $mainMod ALT, B, exec, env -u WAYLAND_DISPLAY firefox
-bind = $mainMod, L, exec, hyprlock
-bind = $mainMod ALT, L, exec, systemctl suspend
-bind = $mainMod, Z, exec, $proxy
-bind = $mainMod ALT, Z, exec, $killProxy
-bind = $mainMod, M, exec, $spotify
-bind = $mainMod CONTROL, C, exec, hyprpicker -a
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = SUPER_ALT, V, exec, cliphist wipe
-bind = $mainMod ALT, K, exec, QT_QPA_PLATFORM=xcb nemo
-bind = $mainMod, A, exec, /home/pryniki/.appimages/krita-5.2.13-x86_64.AppImage
-bind = $mainMod ALT, A, exec, env -u WAYLAND_DISPLAY /home/pryniki/.appimages/PureRef-2.1.0.beta2_x64.Appimage
-bind = $mainMod, G, exec, /home/pryniki/.appimages/sabaki-v0.52.2-linux-x64.AppImage
-
-# hypridle
-bind = $mainMod, I, exec, hypridle & disown && notify-send "idle enabled"
-bind = $mainMod ALT, I, exec, killall hypridle && notify-send "idle disabled"
-
-# Brightness contorl
-bind = CONTROL SHIFT, up, exec, ddcutil -d 1 setvcp 10 + 10
-bind = CONTROL SHIFT, down, exec, ddcutil -d 1 setvcp 10 0
-
-# Volume control
-bind = ALT, up, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = ALT, down, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-
-# Media control shortcuts
-bind = ALT, Next, exec, playerctl --player=spotify play-pause
-bind = ALT, Right, exec, playerctl --player=spotify next
-bind = ALT, Left, exec, playerctl --player=spotify previous
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Switch special workspaces with mainMod + [F1-F12]
-bind = $mainMod, F1, togglespecialworkspace, art
-bind = $mainMod, F2, togglespecialworkspace, 2
-bind = $mainMod, F4, togglespecialworkspace, 3
-bind = $mainMod, F5, togglespecialworkspace, 4
-bind = $mainMod, F6, togglespecialworkspace, 5
-bind = $mainMod, F8, togglespecialworkspace, 6
-bind = $mainMod, F7, togglespecialworkspace, 7
-bind = $mainMod, F8, togglespecialworkspace, 8
-bind = $mainMod, F9, togglespecialworkspace, games
-bind = $mainMod, F10, togglespecialworkspace, 10
-bind = $mainMod, F11, togglespecialworkspace, 11
-bind = $mainMod, F12, togglespecialworkspace, 12
-
-# Move active window to a workspace with mainMod + SHIFT + [F1-F12]
-bind = $mainMod SHIFT, F9, movetoworkspace, special:games
-bind = $mainMod SHIFT, F1, movetoworkspace, special:art
-
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# xkill alternative
-bind = $mainMod ALT, C, exec, hyprctl kill
-
-#toggle fullscreen
-bind = $mainMod, F, fullscreen,
-
 #change language in fcitx5
 #bind = SHIFT, Alt_L, exec, fcitx5-remote -t
 
@@ -409,8 +270,8 @@ windowrulev2 = bordersize 2, floating:1
 #windowrule = idleinhibit always, $games
 
 # allow tearing
-#windowrulev2 = fullscreen, title:(Overwatch)
-#windowrulev2 = immediate, title:(Overwatch)
+windowrulev2 = fullscreen, title:(Overwatch)
+windowrulev2 = immediate, title:(Overwatch)
 #windowrulev2 = immediate, class:(steam_app_2357570) # overwatch
 #windowrulev2 = immediate, class:(steam_app_2767030) # marvel rivals
 
